more overflow-x issues...
i want to have dinner please

--- a/_layouts/default.css
+++ b/_layouts/default.css
@@ -455,6 +455,8 @@ nav li {
         @media (max-width: 768px) {
             #top-bar-text {
                 display: none;
+            } main img {
+                max-width: calc(100vw - 30px);
             }
         }
 
