--- a/default.css
+++ b/default.css
@@ -458,6 +458,8 @@ nav li {
         @media (max-width: 768px) {
             #top-bar-text {
                 display: none;
+            } main img {
+                max-width: calc(100vw - 30px);
             }
         }
 
